examples/fibonacci_c/grader_output.txt
/home/ovsyanka/code/autograder/examples/fibonacci_c/student_with_wrong_assignment_name.c does not contain the required file extension. Skipping it.
Grading average_student_homework.c
Running 'Test output'
50/50
Running 'Test result'
100/100
Running 'Test time'
Exceeded Time Limit
Result: 75/100

Grading failing_student_homework.c
Failed to precompile:
.../temp/failing_student_homework.c: In function ‘fibonacci’:
.../temp/failing_student_homework.c:2:15: error: ‘P’ undeclared (first use in this function)
    2 |    if (n <= 1)P
      |               ^
.../temp/failing_student_homework.c:2:15: note: each undeclared identifier is reported only once for each function it appears in
.../temp/failing_student_homework.c:2:16: error: expected ‘;’ before ‘return’
    2 |    if (n <= 1)P
      |                ^
      |                ;
    3 |       return n;
      |       ~~~~~~    
/home/ovs... (228 more, please see e.stderr)
Result: 0/100

Grading perfect_student_homework.c
Running 'Test output'
50/50
Running 'Test result'
100/100
Running 'Test time'
50/50
Result: 100/100


Average score: 58/100


Key:
	Failed to Compile: Your submission did not compile due to a syntax or naming error
	Compiled with warnings: Your submission uses unchecked or unsafe operations
	Crashed due to signal SIGNAL_CODE: Your submission threw an uncaught exception.
	All signal error codes are described here: http://man7.org/linux/man-pages/man7/signal.7.html
	Exceeded Time Limit: Your submission took too much time to run (probably an infinite loop)

